fix body and page-wrapper DOM elements having wrong height on ie11 bug

--- a/src/Magento_Theme/web/css/source/_layout.scss
+++ b/src/Magento_Theme/web/css/source/_layout.scss
@@ -42,14 +42,20 @@ html {
     }
 }
 
-.ie11 .page-wrapper {
-    display: block !important;
-}
+.ie11 {
+    body {
+        height: auto;
+        min-height: 100vh;
+    }
 
-.ie11
+    .page-wrapper {
+        min-height: 100vh;
+    }
+
     .modal-popup:not(.#{$namespace}video-player__modal)
     .#{$namespace}modal__content {
-    max-height: calc(100vh - 33rem);
+        max-height: calc(100vh - 33rem);
+    }
 }
 
 .rss {
